# Phantom

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KNOWN_ISSUES.md  LICENSE  NOTICE  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  build.gradle.kts  funding.json  gradle.properties  gradlew  settings.gradle.kts  splash_preview.html
.claude/: settings.example.json  settings.json
.claude/agents/: architect.md  kmp-builder.md  relay-builder.md  security-reviewer.md  ui-prototyper.md
.claude/commands/: alpha0.md  security-pass.md  slice-chat.md  ui-pass.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: android.yml  build-libxray.yml  deploy-lint.yml  mirror.yml  relay.yml
apps/android/: README.md  build.gradle.kts  google-services.json  proguard-rules.pro
apps/android-libxray-test/: README.md  build.gradle.kts
apps/ios/: Color+Phantom.swift  ContentView.swift  Info.plist  Podfile  README.md
deploy/: .env.example  99-phantom-keepalive.conf  Caddyfile  README.md  docker-compose.armA2.yml  docker-compose.wire1-test.yml  docker-compose.yml  obfs4-bridge-setup.md  stunnel.armA2.conf  tor-onion-setup.md  webtunnel-bridge-setup.md
deploy/bridge2/: Caddyfile  DEPLOY.md  docker-compose.yml
deploy/landing/: index.html
deploy/ntfy/: server.yml
deploy/runbooks/rc-relay-state-dir-repair/witness-client/: Cargo.toml  Dockerfile
deploy/runbooks/rc-relay-state-dir-repair/witness-client/src/: main.rs
deploy/stunnel-armA2/: Dockerfile
deploy/tor/: Dockerfile  torrc
deploy/well-known/: assetlinks.json  funding-manifest-urls
deploy/xray/: README.md  config.json.template  render-config.sh
deploy/xray-wire1-test/: README.md  config.json.template
docs/: ARCHITECTURE.md  CRYPTO.md  DESIGN_SYSTEM.md  INVENTORY_REPORT_2026-04-28.md  PRIVACY_MODE_BEHAVIOR.md  PROJECT_LOG.md  WORKING_RULES.md  alpha2-backlog.md  qa_report_2026_04_24.md  tech_debt.md
docs/adr/: ADR-001-System-Boundaries.md  ADR-002-Shared-Core-Layout.md  ADR-003-Transport-Abstraction.md  ADR-004-Relay-Trust-Model.md  ADR-005-Discovery-Scope-for-MVP.md  ADR-006-Crypto-Library-Decision.md  ADR-009-identity-prekey-separation.md  ADR-010-transport-reconnect-deadlock.md  ADR-011-alarm-manager-network-wakeup.md  ADR-013-revised-transport-diagnosis-2026-05-02.md  ADR-014-transport-tcp-keepalive.md  ADR-016-tor-unified-push-hybrid-transport.md  ADR-017-senderkey-signing-removal.md  ADR-017-threat-model-revision-v0_1.md  ADR-018-threat-model-revision-v0_1.md  ADR-019-Xray-REALITY-Outer-Transport.md  ADR-020-Adaptive-Transport-Selection.md  ADR-021-relay-prekey-sql-migration.md  ADR-023-Local-Prekey-Keystore-Wrap.md  ADR-024-Ratchet-State-Keystore-Wrap.md  ADR-025-Call-Signaling-E2EE.md  ADR-026-Group-Control-Messages-E2EE.md  ADR-027-Per-User-Signed-Challenge-Auth.md  ADR-028-direct-stability-architecture-intent.md  ADR-029-pending-active-session-state-machine.md  README.md
docs/audit/: ARCHITECTURE_AUDIT_2026_05_01.md  RELAY_AUDIT_2026_05_01.md  SECURITY_AUDIT_2026_05_01.md
docs/design/: Design_Tokens_v0.md  Design_Vision.md  PR-M1w-design.md  voice-delivery-audit-2026-05-18.md
docs/doctrine/: Product_Doctrine.md
docs/font-setup/: README.md
docs/operations/: TOR_STACK_MAINTENANCE.md
docs/policy/: Abuse_Prevention_Doctrine.md  Child_Safety_and_CSAM_Policy.md  Public_Spaces_Moderation_Model.md
docs/project/: ACTIVE_SPRINT.md  AGENT_PROMPT_24H_SANITY.md  ARCHITECTURAL_DECISIONS_TODO.md  Alpha0_Milestone.md  Alpha2_Migration.md  Backlog_First_20_Tasks.md  DECISIONS_LOG.md  EXECUTION_PLAN_2026_05_01.md  MASTER_TIMELINE_2026.md  Monorepo_Structure.md  PHANTOM_ROADMAP_2026.md  PROJECT_STATUS_SNAPSHOT_2026_05_09.md  README.md  Roadmap_2.0_to_Execution_Map.md  TECHNICAL_BACKLOG.md  TRANSPORTS_STATUS_2026_06_09.md
docs/protocols/: State_Machines.md
docs/release-drafts/: v0.1.0-alpha.1.md
docs/research/: TECNO_HIOS_WIFI_PARKING_RESEARCH.md  xray-reality-integration-2026-05-06.md
docs/security/: SECURITY_ROADMAP.md
docs/spec/: GHOST_MODE_TRANSITIONS.md  PRIVACY_MODE_BEHAVIOR.md  PRIVACY_MODE_COMPARISON_TABLE.md  PRIVACY_MODE_ONBOARDING.md
docs/tests/: M_OPK_3_runbook.md
docs/threat-model/: Threat_Model_v0.md
docs/tracks/: chat-autoscroll.md  chat-bottom-anchor.md  chat-new-msg-chip.md  chat-thread-cache.md  chat-thread-state.md  client-prekey-selfheal.md  crypto-inbound-x3dh-repair.md  crypto-session-repair.md  direct-wss-mode2-b2-lte-recon1.md  direct-wss-mode2-recon1.md  doc-honesty.md  lte-netchange.md  notif-policy.md  notifications-diag.md  quiescence-validation-l1-synthetic-mini-lock.md  rec-followup.md  (+22 more)
examples/: Prompt_for_Claude_in_VSCode.md
gradle/: libs.versions.toml
keystores/: README.md
legal/: PRIVACY_POLICY_EN.md  PRIVACY_POLICY_RU.md  README.md  TERMS_OF_SERVICE_EN.md  TERMS_OF_SERVICE_RU.md  TOS_SUMMARY_EN.md  TOS_SUMMARY_RU.md  privacy-ru.html  privacy.html  render.py  terms-ru.html  terms.html
prompts/: Claude_Code_Task_Template.md  Security_Review_Template.md
scripts/: README.md  add-spdx-headers.py  t2-slow-post-preflight.py
services/: Cargo.toml
services/bootstrap/: Cargo.toml  README.md
services/bootstrap/src/: main.rs
services/directory/: Cargo.toml  README.md
services/directory/src/: main.rs
services/relay/: Cargo.toml  Dockerfile  README.md
services/relay/src/: auth.rs  config.rs  diag_poll_shape.rs  diag_shape.rs  envelope.rs  error.rs  lib.rs  main.rs  media.rs  prekeys.rs  push.rs  rest_fallback.rs  routes.rs  seq_mac.rs  state.rs  t2_diag.rs
services/relay/tests/: config_boot.rs  diag_poll_shape.rs  diag_shape_smoke.rs  hold_cap.rs  ingress_hardening.rs  media_endpoints.rs  poll_chunked_flush.rs  poll_hold.rs  prekey_endpoints.rs  prekey_persist_atomicity.rs  rest_fallback_endpoints.rs  seq_mac_vectors.rs  slow_post_diag.rs  state_persistence.rs  t2_diag.rs  token_invalidation.rs
site/: README.md  about.html  donate.html  index.html  roadmap.html  robots.txt  site.js  sitemap.xml  styles.css
(+555 files in other folders)
