[workspace]
resolver = "2"
members = [
    "relay",
    "bootstrap",
    "directory",
]

[workspace.dependencies]
# Web framework — MIT license, no unsafe_code
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "timeout", "request-id", "trace", "limit"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
config = "0.14"

# Time
time = { version = "0.3", features = ["serde"] }

futures-util = "0.3"
subtle = "2"

# Testing
tokio-test = "0.4"
