[workspace]
resolver = "2"
members = [
    "relay",
    "bootstrap",
    "directory",
]

[workspace.dependencies]
# Web framework — MIT license, no unsafe_code
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "timeout", "request-id", "trace", "limit"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
config = "0.14"

# Time
time = { version = "0.3", features = ["serde"] }

futures-util = "0.3"
subtle = "2"

# Crypto — Ed25519 detached-signature verification for prekey bundles.
# Pure-Rust impl, no native deps, MIT/Apache-2.0 dual-licensed.
# Used by the prekey-publish endpoint to verify the SPK signature before
# accepting a bundle. The relay never signs, only verifies.
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }

# Random bytes for OPK keyId generation (16 bytes from OS RNG).
rand = "0.8"

# Hex encoding for public keys / keyIds in URL paths.
hex = "0.4"

# Testing
tokio-test = "0.4"
