[workspace]
resolver = "2"
members = [
    "relay",
    "bootstrap",
    "directory",
]

[workspace.dependencies]
# Web framework — MIT license, no unsafe_code
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "timeout", "request-id", "trace", "limit"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
config = "0.14"

# Time
time = { version = "0.3", features = ["serde"] }

futures-util = "0.3"
subtle = "2"

# Crypto — Ed25519 detached-signature verification for prekey bundles.
# Pure-Rust impl, no native deps, MIT/Apache-2.0 dual-licensed.
# Used by the prekey-publish endpoint to verify the SPK signature before
# accepting a bundle. The relay never signs, only verifies.
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }

# Random bytes for OPK keyId generation (16 bytes from OS RNG).
rand = "0.8"

# Hex encoding for public keys / keyIds in URL paths.
hex = "0.4"

# HTTP client for outbound POST to the ntfy distributor (UnifiedPush
# wakeup channel — ADR-016). rustls-tls only — we deliberately avoid
# linking native OpenSSL into the relay binary. Minimal feature set:
# no cookies, no compression, no proxy autodetection.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# LRU cache for per-identity idempotency key tracking (REST fallback PR-D0r).
# Bounded eviction prevents unbounded growth when a single sender issues
# many unique Idempotency-Key values over 24 hours.
lru = "0.12"

# SHA-256 for idempotency body-hash (REST fallback PR-D0r). Cryptographic
# digest is required at the idempotency boundary so 200-replay vs 409-conflict
# decisions cannot be flipped by a hash collision. ed25519-dalek already pulls
# sha2 transitively; declaring it explicitly here keeps the dep audit honest.
sha2 = "0.10"

# Base64 encoding/decoding for media ciphertext blobs (PR-M1r). reqwest pulls
# base64 v0.22 transitively; declaring it explicitly pins the version used
# in media.rs and keeps the dep audit honest.
base64 = "0.22"

# Testing
tokio-test = "0.4"
