[package]
name = "phantom-bootstrap"
version = "0.1.0"
edition = "2021"
description = "PHANTOM bootstrap — minimal network entry point. Returns relay nodes, transport config, version hints."

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
