[package]
name = "phantom-relay"
version = "0.1.0"
edition = "2021"
description = "PHANTOM relay — ciphertext store-and-forward. Stores only encrypted blobs. Never inspects plaintext."

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
time = { workspace = true }
futures-util = { workspace = true }
subtle = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
lru = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
# PR-H1c (2026-05-13): TCP keepalive on the relay's listening socket so
# accepted client connections inherit aggressive keepalive timers (15s
# idle, 5s probe interval, 3 fails before RST). On Linux, SO_KEEPALIVE
# and the TCP_KEEPIDLE/INTVL/CNT options on a listening socket are
# inherited by accept()ed sockets — this gives us per-connection TCP-
# level dead-peer detection without restructuring the axum serve loop.
socket2 = { version = "0.5", features = ["all"] }

[dev-dependencies]
tokio-test = { workspace = true }
tower = { workspace = true, features = ["util"] }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
# RC-RELAY-STATE-DIR-REPAIR PR-1a §7.1: integration tests inject a
# tempdir into RelayConfig.state_dir rather than reaching for env::set_var,
# which races between parallel test workers. Restricted to dev-dependencies
# so the runtime binary never links tempfile.
tempfile = "3"
